src/Components/Collections/HomePage/About/About.module.css
.aboutQualificationsEducationItemTitle > br {
    margin: 0px;
    padding: 0px;
}

@media screen and (max-width: 414px) {
    .entireAbout {
        display: flex;
        align-items: center;
        justify-content: center;
    }

    .aboutContainer {
        display: flex;
        padding: 64px 16px;
        flex-direction: column;
        align-items: center;
        gap: 40px;
    }

    .aboutTitleText {
        width: 343px;
        color: #111;
        text-align: center;
        font-family: 'Montserrat';
        font-size: 24px;
        font-style: normal;
        font-weight: 500;
        line-height: 100%; /* 24px */
    }

    .aboutImgContainer {
        display: flex;
        height: 101px;
        padding: 4px 89.866px 4px 80px;
        align-items: center;
    }

    .aboutImg {
        background: url(../../../../assets/Images/topImage.png) rgb(255, 255, 255) 50% / cover no-repeat;
        width: 178.134px;
        height: 93px;
    }

    .aboutHeaderText {
        align-self: stretch;
        color: #111;
        text-align: center;
        font-family: 'Montserrat';
        font-size: 22px;
        font-style: normal;
        font-weight: 500;
        line-height: 160%; /* 35.2px */
        margin-top: -32px;
        margin-bottom: -32px;
    }

    .aboutBodyText {
        color: #111;
        text-align: center;
        font-family: Verdana;
        font-size: 14px;
        font-style: normal;
        font-weight: 400;
        line-height: 160%; /* 22.4px */
        letter-spacing: 0.7px;
    }

    .aboutQualifications {
        display: flex;
        flex-direction: column;
        align-items: center;
        align-self: stretch;
        border-top: 1px solid #E4E5DA;
        border-bottom: 1px solid #E4E5DA;
    }

    .aboutQualificationsEducation {
        display: flex;
        padding: 24px 0px;
        flex-direction: column;
        align-items: flex-start;
        gap: 16px;
        align-self: stretch;
    }

    .aboutQualificationsTitle {
        color: #111;
        font-family: 'Montserrat';
        font-size: 20px;
        font-style: normal;
        font-weight: 500;
        line-height: 100%; /* 20px */
    
    }

    .aboutQualificationsEducationItems {
        display: flex;
        align-items: flex-start;
        gap: 16px;
        align-self: stretch;
        
    }

    .aboutQualificationsEducationItem {
        display: flex;
        flex-direction: column;
        align-items: flex-start;
        justify-content: space-between;
        flex: 1 0 0;
        align-self: stretch;
        color: #111;
        font-family: Verdana;
        font-size: 13px;
        font-style: normal;
        font-weight: 400;
        line-height: 150%;
        padding-bottom: 16px;
    }

    .aboutQualificationsEducationItemTitle {
        color: #111;
        font-family: Verdana;
        font-size: 13px;
        font-style: normal;
        font-weight: 400;
        line-height: 150%;
    }

    .aboutQualificationsEducationItemDate {
        align-self: stretch;
        color: #707070;
        font-family: Verdana;
        font-size: 12px;
        font-style: normal;
        font-weight: 400;
        line-height: 100%; /* 12px */
        margin-top: 16px;
    }

    .aboutQualificationsHobbies {
        border-top: 1px solid #E4E5DA;
        padding-top: 24px;
    }

    .aboutQualificationsHobbiesDescription {
        align-self: stretch;
        color: #111;
        font-family: Verdana;
        font-size: 14px;
        font-style: normal;
        font-weight: 400;
        line-height: 140%; /* 19.6px */
        padding-top: 16px;
    }

    .aboutLinks {
        display: flex;
        justify-content: center;
        align-items: flex-start;
        gap: 40px;
    }

    .aboutAnchor {
        color: #111;
        text-decoration: none;
        text-align: center;
        font-family: Verdana;
        font-size: 13px;
        font-style: normal;
        font-weight: 400;
        line-height: 140%; /* 18.2px */
    }

    .aboutAnchor:hover {
        color: green;
        transition: .5s;
    }

    .aboutTalkButton {
        display: flex;
        height: 44px;
        padding: 15px 17px;
        justify-content: center;
        align-items: center;
        border-radius: 10px;
        background: #111;
        color: #FFF;
        font-family: Verdana;
        font-size: 14px;
        font-style: normal;
        font-weight: 400;
        line-height: 100%; /* 14px */
        background: #111;
        color: white;
        border: none;
    }

    .aboutTalkButton:hover {
        cursor: pointer;
        background: #2e2e2e;
    }
}
/* ... */

